# lingua

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: scaleway.yml
alembic/: env.py
alembic/versions/: 001_add_tool_calling_support.py  756802b2928b_add_registered_functions_and_mcp_.py  c12098f677e1_add_assistants_table.py  d89ef8e53a7b_add_tool_config_to_chat_and_message.py  fcb1d9f346b2_remove_function_calling_support.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: assistants.py  chats.py  functions.py  llm.py  mcp.py  memories.py  messages.py  messages_send.py  subtenants.py  tools.py
app/core/: config.py  functions.py  mcp_client.py
app/db/: base.py  database.py  models.py
app/providers/: anthropic_provider.py  base.py  factory.py  local_provider.py  openai_provider.py
app/schemas/: assistant.py  chat.py  functions.py  llm.py  mcp.py  memory.py  message.py  subtenant.py
app/services/: message_service.py
examples/: function_calling_example.py  simple_mcp_server.py
tests/: test_assistants.py  test_basics.py  test_chats.py  test_functions.py  test_llm.py  test_mcp.py  test_memories.py  test_messages.py  test_subtenants.py  test_tools.py
